Working on @Database annotation.
To do; fix error: `class lombok.javac.apt.Processor (in unnamed module @0x15db4dc) cannot access class com.sun.tools.javac.processing.JavacProcessingEnvironment (in module jdk.compiler) because module jdk.compiler does not export com.sun.tools.javac.processing to unnamed module @0x15db4dc`